# A-I-M-S-TOOL-WAREHOUSE

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
aims_warehouse/: __init__.py  advisor.py  redaction.py  warehouse_service.py
aims_warehouse/billing/: __init__.py  bootstrap.py  email.py  pricing.py  provision.py  routes.py  stripe_gateway.py
aims_warehouse/frontend/: __init__.py  router.py  sessions.py
aims_warehouse/frontend/static/: aims.css  app.js
aims_warehouse/frontend/static/lottie/: hero.json
aims_warehouse/frontend/templates/: account.html  base.html  floor.html  signin.html  signin_sent.html
aims_warehouse/frontend/templates/partials/: keys_table.html  search_results.html  signin_stub.html  tool_modal.html  zone.html
aims_warehouse/integrations/: __init__.py  autobase.py  base.py  catalog.py  coder.py  filedrop.py  hermes.py  registry.py
aims_warehouse/picker_ang/: tool_warehouse.py
aims_warehouse/picker_ang/data/: foai-tool-inventory-log.jsonl
aims_warehouse/tenancy/: __init__.py  auth.py  db.py  keys.py  store.py
mcp/: Dockerfile  README.md  example_client.py  pyproject.toml
mcp/aims_warehouse_mcp/: __init__.py  __main__.py  server.py
skill/: README.md
skill/tool-gap-analysis/: SKILL.md
tests/: it_billing_db.py  test_billing.py  test_catalog_redaction.py
