[project]
name = "aims-warehouse-mcp"
version = "0.1.0"
description = "MCP server for the A.I.M.S. Tool Warehouse — catalog search, certified selection, and goal-mode tool recommendations (the AIMS Advisor)."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.28",
]

[project.scripts]
aims-warehouse-mcp = "aims_warehouse_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aims_warehouse_mcp"]
